Removed AbstractHandler in favor for a service